--- a/httpServer/package.json
+++ b/httpServer/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@hapi/hapi": "^19.1.1",
     "@hapi/inert": "^6.0.1",
+    "@hapi/nes": "^12.0.2",
     "mongodb": "^3.5.5",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^19.0.2",
+    "@types/hapi__nes": "^11.0.3",
+    "@types/minimist": "^1.2.0",
     "@types/mongodb": "^3.5.2",
     "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
@@ -26,7 +29,6 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "@types/minimist": "^1.2.0"
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
