--- a/httpServer/ui/package.json
+++ b/httpServer/ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "@hapi/nes": "^12.0.2",
