--- a/httpServer/ui/package.json
+++ b/httpServer/ui/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@hapi/nes": "^12.0.2",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "next": "9.3.1",
     "next-transpile-modules": "^3.1.0",
     "normalize.css": "^8.0.1",
+    "pusher": "^3.0.0",
+    "pusher-js": "^5.1.1",
     "react": "16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
     "sass": "^1.26.3"
   }
