--- a/httpServer/docker-compose.yml
+++ b/httpServer/docker-compose.yml
@@ -5,19 +5,23 @@ services:
     image: beademingstoestel/interface
     build:
       context: .
+      dockerfile: ./docker/web/Dockerfile
       args:
         environment: test
     ports:
       - 3001:3001
     depends_on:
       - mongo
-    restart: always
+    restart: always  
   mongo:
-    image: mongo
+    image: beademingstoestel/mongo
+    build:
+      context: ./docker/db
+      dockerfile: ./Dockerfile
     restart: always
     environment:
       MONGO_INITDB_DATABASE: beademing
     ports:
       - 27017:27017
     volumes:
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./docker/db/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
