--- a/httpServer/docker/db/Dockerfile
+++ b/httpServer/docker/db/Dockerfile
@@ -1,6 +1,8 @@
 FROM mongo
 
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 27017
