--- a/httpServer/ui/package.json
+++ b/httpServer/ui/package.json
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
+    "react-toastify": "^5.5.0",
     "sass": "^1.26.3"
   }
 }
