Make entrypoint script executable
Fixes: container startup error

Signed-off-by: Frank Vanbever <frank.vanbever@essensium.com>

--- a/httpServer/docker/web/Dockerfile
+++ b/httpServer/docker/web/Dockerfile
@@ -16,6 +16,8 @@ WORKDIR /app
 
 EXPOSE 3001
 
+RUN chmod +x ./entrypoint.sh
+
 ENTRYPOINT ["./entrypoint.sh"]
 
 CMD [ "node", "./build/index.js" ]
