--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,13 +21,10 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Login to Docker Hub
-      inputs:
-        command: login
-        containerRegistry: dockerRegistryServiceConnection2
-    - task: Docker@2
       displayName: Build an image
       inputs:
+        containerRegistry: 'DockerHubConnection'
+        repository: 'interface'
         command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/httpServer/docker/web/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/httpServer'
