--- a/httpServer/uiWardOverview/package.json
+++ b/httpServer/uiWardOverview/package.json
@@ -3,24 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "export": "next export"
   },
   "dependencies": {
-    "@hapi/nes": "^12.0.2",
-    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "next": "9.3.1",
     "next-transpile-modules": "^3.1.0",
-    "normalize.css": "^8.0.1",
     "react": "16.13.1",
-    "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
-    "react-numpad": "^5.0.4",
-    "react-toastify": "^5.5.0",
     "sass": "^1.26.3",
-    "simple-keyboard": "^2.28.46"
+    "ventilator-lungs-ui": "file:../ui"
   }
 }
