--- a/httpServer/package.json
+++ b/httpServer/package.json
@@ -13,6 +13,7 @@
     "@hapi/hapi": "^19.1.1",
     "@hapi/inert": "^6.0.1",
     "@hapi/nes": "^12.0.2",
+    "hapijs-status-monitor": "^1.0.1",
     "mongodb": "^3.5.5",
     "typescript": "^3.8.3"
   },
