set version number during CI process

--- a/httpServer/docker/web/Dockerfile
+++ b/httpServer/docker/web/Dockerfile
@@ -1,8 +1,18 @@
 FROM node:12
 
+ARG major_version=1
+ENV major_version=$major_version
+
+ARG minor_version=1
+ENV minor_version=$minor_version
+
+ARG build_number=1
+ENV build_number=$build_number
+
 WORKDIR /app
 
 COPY . .
+RUN npm version $major_version.$minor_version.$build_number
 RUN npm install
 RUN npm install -g typescript 
 RUN tsc
