--- a/httpServer/ui/package.json
+++ b/httpServer/ui/package.json
@@ -12,6 +12,7 @@
     "@hapi/nes": "^12.0.2",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "mathjs": "^6.6.4",
     "next": "9.3.2",
     "next-transpile-modules": "^3.1.0",
     "normalize.css": "^8.0.1",
