--- a/httpServer/uiWardOverview/package.json
+++ b/httpServer/uiWardOverview/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "mathjs": "^6.6.4",
     "next": "9.3.2",
     "next-transpile-modules": "^3.1.0",
     "react": "16.13.1",
