--- a/httpServer/ui/package.json
+++ b/httpServer/ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hapi/nes": "^12.0.2",
+    "@material-ui/core": "^4.10.2",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "mathjs": "^6.6.4",
